--- a/gpt2_finetuning_project.ipynb
+++ b/gpt2_finetuning_project.ipynb
@@ -92,21 +92,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JDlR60_YD4pW"
-      },
-      "source": [
-        "## 2. 加载数据集\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 203,
+          "height": 223,
           "referenced_widgets": [
             "c38f261f74eb42beb991e78ec8ab4e30",
             "cd6e54ff90484d529363a39169efd680",
@@ -330,15 +321,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "5lG7MIhYD4pW"
-      },
-      "source": [
-        "## 3. 数据可视化\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
@@ -450,15 +432,6 @@
         "print(\"\\nSaved: 'poem_length_distribution.png'\")\n",
         "plt.show()\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xS6_KmCcD4pW"
-      },
-      "source": [
-        "## 4. 加载 Tokenizer（关键步骤）\n"
       ]
     },
     {
@@ -850,15 +823,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rNa1D5PQD4pX"
-      },
-      "source": [
-        "## 7. 加载模型\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 12,
       "metadata": {
@@ -920,15 +884,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "d5e9QxXRD4pX"
-      },
-      "source": [
-        "## 8. 训练配置 TrainingArguments\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": 13,
       "metadata": {
@@ -966,21 +921,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Vo7BS4fBD4pX"
-      },
-      "source": [
-        "## 9. 启动训练\n"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 125,
+          "height": 145,
           "referenced_widgets": [
             "7a9d9c18e4464d73a46ae133d774c0ac",
             "ce727cf021d0478d845e6c9075f883be",
@@ -1030,8 +976,8 @@
               "\n",
               "    <div>\n",
               "      \n",
-              "      <progress value='338' max='44364' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [  338/44364 01:08 < 2:29:04, 4.92 it/s, Epoch 0.02/3]\n",
+              "      <progress value='2001' max='44364' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [ 2001/44364 06:49 < 2:24:29, 4.89 it/s, Epoch 0.14/3]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -1043,7 +989,13 @@
               "  </thead>\n",
               "  <tbody>\n",
               "  </tbody>\n",
-              "</table><p>"
+              "</table><p>\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='7485' max='14788' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [ 7485/14788 02:29 < 02:26, 49.94 it/s]\n",
+              "    </div>\n",
+              "    "
             ]
           },
           "metadata": {}
@@ -1064,15 +1016,6 @@
         "trainer.train()\n",
         "\n",
         "print(\"\\n finished trained！\")\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DeCH4HrCD4pX"
-      },
-      "source": [
-        "## 10. 保存模型\n"
       ]
     },
     {
@@ -1133,7 +1076,6 @@
       },
       "outputs": [],
       "source": [
-        "# 文本生成函数\n",
         "def generate_text(prompt, model=None, tokenizer=None, max_length=80, **kwargs):\n",
         "\n",
         "    if model is None:\n",
@@ -1342,7 +1284,6 @@
       },
       "outputs": [],
       "source": [
-        "# 创建对比表格\n",
         "comparison_data = []\n",
         "for strategy_name, results in all_results.items():\n",
         "    for result in results:\n",
